--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -13,4 +13,5 @@
 @import "buttons";
 @import "reviews";
 @import "my_account_container";
-@import "my_account_nav"
+@import "my_account_nav";
+@import "translator";
