--- a/app/assets/stylesheets/components/_reviews.scss
+++ b/app/assets/stylesheets/components/_reviews.scss
@@ -1,3 +1,7 @@
+.main-reviews-container {
+  margin-bottom: 60px;
+}
+
 .my-note {
   margin-right: 16px !important;
 }
@@ -32,7 +36,7 @@
     font-size: 20px;
     padding: 0;
     color: #fafafa;
-    background-color: turquoise !important;
+    background-color: $turquoise !important;
     position: absolute;
     right: 0px;
     border: 0 !important;
