--- a/app/views/shared/_reviews.html.erb
+++ b/app/views/shared/_reviews.html.erb
@@ -37,7 +37,7 @@
       <%= simple_form_for @review, url: resource_reviews_path(resource), class: "inline" do |f| %>
         <%= f.input :rating, label: false, :collection => [1, 2, 3, 4, 5], prompt: "#{current_user.first_name}, del 1 al 5, ¿qué te pareció?" %>
         <%= f.input :content, label: false, required: false, class: "review-text-input", placeholder: "¿Por qué no dejar una nota?" %>
-        <%= button_tag :submit, class: "btn btn-info review-button" do %>
+        <%= button_tag :submit, class: "btn review-button" do %>
           <i class="fa-solid fa-plus"></i>
         <% end %>
      <% end %>
