added translator to all show pages

--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -16,6 +16,7 @@
 
     <div class="sidebar">
       <%= render "shared/reviews", resource: @resource %>
+      <%= render "shared/translator" %>
     </div>
   </div>
 </div>
