--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -17,6 +17,7 @@
 
     <div class="sidebar">
       <%= render "shared/reviews", resource: @resource %>
+      <%= render "shared/translator" %>
     </div>
 
   </div>
