--- a/app/assets/stylesheets/components/_index_feature.scss
+++ b/app/assets/stylesheets/components/_index_feature.scss
@@ -76,7 +76,7 @@
 //   text-overflow: ellipsis;
 // }
 
-#video-spotlight-icon {
+#spotlight-icon {
   position: absolute;
   right: 32px;
   bottom: 32px;
