my account styling

--- a/app/assets/stylesheets/components/_my_account_container.scss
+++ b/app/assets/stylesheets/components/_my_account_container.scss
@@ -27,6 +27,15 @@
   }
 }
 
+.my-profile-preferences {
+
+}
+
+.my-profile-preferences h5 {
+  margin-bottom: 32px;
+  margin-top: 32px;
+}
+
 .my-preferences-content {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -34,18 +43,54 @@
   width: 80%;
 }
 
-.my-preferences-card {
+.my-content-preferences-card {
   color: $primarycolor;
   border: 1px solid $primarycolor;
   height: 120px;
   width: 120px;
   border-radius: 6px;
+  padding: 14px;
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  transition: 0.2s;
     &:hover {
       color: $secondarycolor;
       border: 2px solid $secondarycolor;
     }
+}
 
+.my-preferences-format {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 36px;
+  width: 80%;
+}
+
+.my-format-preferences-card {
+  color: $primarycolor;
+  font-size: 48px;
+  border: 1px solid $primarycolor;
+  height: 162px;
+  width: 162px;
+  border-radius: 6px;
+  padding: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  transition: 0.2s;
+    &:hover {
+      color: $secondarycolor;
+      border: 2px solid $secondarycolor;
+      i {
+        color: $secondarycolor;
+      }
+    }
+}
+
+.my-format-preferences-card .format-icon {
+  color: $primarycolor;
+  font-size: 44px;
 }
