--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -6,12 +6,18 @@
   border-radius: 50%;
 }
 
-
 .avatar-large {
   width: 56px;
   height: 56px;
   border-radius: 50%;
   border: 2px solid $secondarycolor;
+}
+
+.avatar-x-large {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  border: 1px solid $primarycolor;
 }
 
 .avatar-small {
