--- a/app/views/my_account/_my_profile.html.erb
+++ b/app/views/my_account/_my_profile.html.erb
@@ -1,50 +1,48 @@
 <div class="my-profile-container">
   <h2>My profile</h2>
+  <h5>My details</h5>
 
-    <div class="my-profile-details">
+    <div class="my-profile-details mb-5">
+
+
+    <% if current_user.photo.attached? %>
+      <%= cl_image_tag current_user.photo.key, class: "avatar-x-large", crop: :fill %>
+    <% else %>
+      <%= image_tag "default_avatar.png", class: "avatar-x-large" %>
+    <% end %>
+
       <%= current_user.first_name %>
       <%= current_user.last_name %>
     </div>
 
     <div class="my-profile-preferences">
       <h4>My preferences</h4>
+
+      <h5>Media format</h5>
+
+      <div class="my-preferences-format">
+        <div class="my-format-preferences-card">
+          <i class="fa-solid fa-video format-icon"></i>
+        </div>
+        <div class="my-format-preferences-card">
+          <i class="fa-solid fa-podcast format-icon"></i>
+        </div>
+        <div class="my-format-preferences-card">
+          <i class="fa-solid fa-music format-icon"></i>
+        </div>
+        <div class="my-format-preferences-card">
+          <i class="fa-brands fa-readme format-icon"></i>
+        </div>
+      </div>
+
       <h5>Content</h5>
 
       <div class="my-preferences-content">
-        <div class="my-preferences-card">
-        Music
+        <% @tags.each do |tag| %>
+        <div class="my-content-preferences-card">
+        <%= tag %>
         </div>
-        <div class="my-preferences-card">
-        Theatre
-        </div>
-        <div class="my-preferences-card">
-        Dance
-        </div>
-        <div class="my-preferences-card">
-        Sport
-        </div>
-        <div class="my-preferences-card">
-        Politics
-        </div>
-        <div class="my-preferences-card">
-        Dance
-        </div>
-        <div class="my-preferences-card">
-        Sport
-        </div>
-         <div class="my-preferences-card">
-        Politics
-        </div>
-
-
+        <% end %>
       </div>
-      <h5>Media format</h5>
-
-
-
     </div>
-
-
-
-
 </div>
