--- a/app/views/my_account/_my_profile.html.erb
+++ b/app/views/my_account/_my_profile.html.erb
@@ -1,22 +1,48 @@
 <div class="my-profile-container">
   <h2>My profile</h2>
-  <h5>My details</h5>
 
-    <div class="my-profile-details mb-5">
+  <h3>My details</h3>
 
-
-    <% if current_user.photo.attached? %>
-      <%= cl_image_tag current_user.photo.key, class: "avatar-x-large", crop: :fill %>
-    <% else %>
-      <%= image_tag "default_avatar.png", class: "avatar-x-large" %>
-    <% end %>
-
-      <%= current_user.first_name %>
-      <%= current_user.last_name %>
+    <div class="my-profile-details mb-5 d-flex">
+      <div class="profile-image">
+        <% if current_user.photo.attached? %>
+          <%= cl_image_tag current_user.photo.key, class: "avatar-x-large", crop: :fill %>
+        <% else %>
+          <%= image_tag "default_avatar.png", class: "avatar-x-large" %>
+        <% end %>
+      </div>
+      <div class="profile-personal-details">
+        <table>
+          <tr>
+            <td style="width:200px; height:38px;">First name</td>
+            <td style="width:600px;"><%= current_user.first_name %></td>
+          </tr>
+          <tr>
+            <td style="width:200px; height:38px;">Last name</td>
+            <td><%= current_user.last_name %></td>
+          </tr>
+          <tr>
+            <td style="width:200px; height:38px;">Age</td>
+            <td><%= current_user.age%></td>
+          </tr>
+          <tr>
+            <td style="width:200px; height:38px;">Native language</td>
+            <td><%= current_user.native_language%></td>
+          </tr>
+          <tr>
+            <td style="width:200px; height:38px;">Target language</td>
+            <td><%= current_user.target_language%></td>
+          </tr>
+          <tr>
+            <td style="width:200px; height:38px;">Bio</td>
+            <td><%= current_user.bio%></td>
+          </tr>
+        </table>
+      </div>
     </div>
 
     <div class="my-profile-preferences">
-      <h4>My preferences</h4>
+      <h3>My preferences</h3>
 
       <h5>Media format</h5>
 
@@ -34,7 +60,8 @@
           <i class="fa-brands fa-readme format-icon"></i>
         </div>
       </div>
-
+      <br>
+      <br>
       <h5>Content</h5>
 
       <div class="my-preferences-content">
