style my classroom

--- a/app/views/my_classroom/_vocabulary_table.html.erb
+++ b/app/views/my_classroom/_vocabulary_table.html.erb
@@ -1,8 +1,8 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Español</th>
-      <th scope="col">English</th>
+      <th scope="col">Español 🇪🇸</th>
+      <th scope="col">English 🇬🇧</th>
       <th scope="col">Notes</th>
     </tr>
   </thead>
