--- a/app/views/my_classroom/_my_vocabulary.html.erb
+++ b/app/views/my_classroom/_my_vocabulary.html.erb
@@ -1,11 +1,18 @@
-<h2>My Vocabulary</h2>
-
-<h3 class="mt-3">Add a new word</h3>
-<%= simple_form_for @word, url: words_path do |f| %>
-  <%= f.input :spanish_def %>
-  <%= f.input :english_def %>
-  <%= f.input  :extra_info %>
-  <%= f.button :submit %>
-<% end %>
+<h2 class="mb-5">My Vocabulary</h2>
 
 <%= render "vocabulary_table" %>
+
+<h3 class="mt-5">Add a new word</h3>
+
+<%= simple_form_for @word, url: words_path, remote: true do |f| %>
+  <div class="w-50 d-flex flex-column">
+    <%= f.input :spanish_def, required: false, label: "Español:" %>
+    <%= f.input :english_def, required: false, label: "English:" %>
+    <%= f.input  :extra_info, label: "Add a note?" %>
+    <%= button_tag :submit, class: "btn vocab-button align-self-end" do %>
+      <i class="fa-solid fa-plus"></i>
+    <% end %>
+  </div>
+<% end %>
+
+<%= render "shared/translator" %>
