--- a/app/views/my_classroom/show.html.erb
+++ b/app/views/my_classroom/show.html.erb
@@ -6,24 +6,27 @@
     <div class="w-25 my-account-nav-container">
 <%# <i class="fa-solid fa-caret-right"></i> %>
       <ul class="nav flex-column nav-pills" id="pills-tab" role="tablist">
-        <li class="nav-item d-flex" role="presentation">
-          <button class="nav-link active" id="pills-notes-tab" data-bs-toggle="pill" data-bs-target="#pills-notes" type="button" role="tab" aria-controls="pills-notes" aria-selected="true">My notes</button>
-        </li>
+
         <li class="nav-item" role="presentation">
-          <button class="nav-link" id="pills-vocabulary-tab" data-bs-toggle="pill" data-bs-target="#pills-vocabulary" type="button" role="tab" aria-controls="pills-vocabulary" aria-selected="false">My vocabulary</button>
+          <button class="nav-link active" id="pills-vocabulary-tab" data-bs-toggle="pill" data-bs-target="#pills-vocabulary" type="button" role="tab" aria-controls="pills-vocabulary" aria-selected="false">My vocabulary</button>
         </li>
+
+        <li class="nav-item d-flex" role="presentation">
+          <button class="nav-link" id="pills-notes-tab" data-bs-toggle="pill" data-bs-target="#pills-notes" type="button" role="tab" aria-controls="pills-notes" aria-selected="true">My notes</button>
+        </li>
+
       </ul>
     </div>
 
     <div class="w-75 mb-5">
       <div class="tab-content" id="pills-tabContent">
 
-        <div class="tab-pane fade show active" id="pills-notes" role="tabpanel" aria-labelledby="pills-notes-tab">
-          <%= render "my_notes" %>
+        <div class="tab-pane fade show active" id="pills-vocabulary" role="tabpanel" aria-labelledby="pills-vocabulary-tab">
+          <%= render "my_vocabulary" %>
         </div>
 
-        <div class="tab-pane fade" id="pills-vocabulary" role="tabpanel" aria-labelledby="pills-vocabulary-tab">
-          <%= render "my_vocabulary" %>
+        <div class="tab-pane fade" id="pills-notes" role="tabpanel" aria-labelledby="pills-notes-tab">
+          <%= render "my_notes" %>
         </div>
 
       </div>
