--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -9,7 +9,7 @@
       <div class= "search-bar">
         <%= text_field_tag :query,
           params[:query],
-          class: "form-control text-input round-left-corners",
+          class: "form-control text-input round-corners",
           placeholder: "Search"
         %>
 
