--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,4 +13,4 @@
 @import "pages/index";
 @import "utilities/index";
 @import "components/index_hero";
-@import "components/index_feature"
+@import "components/index_feature";
