--- a/app/assets/stylesheets/utilities/_custom_container.scss
+++ b/app/assets/stylesheets/utilities/_custom_container.scss
@@ -25,3 +25,17 @@
 .sidebar {
   width: 30%;
 }
+
+.related-container {
+  width: 100%;
+  display: grid;
+  padding-top: 5px;
+  grid-column-gap: 32px;
+  grid-template-columns: 1fr;
+  row-gap: 48px;
+  margin: 16px 0px;
+  grid-auto-flow: column;
+  height: 290px;
+  overflow-y: scroll;
+  scrollbar-color: $secondarycolor;
+}
