--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -18,6 +18,9 @@
     <div class="sidebar">
       <%= render "shared/reviews", resource: @resource %>
       <%= render "shared/translator" %>
+      <div class="related-container">
+        <%= render @related_resources %>
+      </div>
     </div>
 
   </div>
