my classroom complete

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -23,6 +23,9 @@
   .nav-link-account {
     border-bottom: 3px solid $turquoise;
   }
+  .nav-link-classroom {
+    border-bottom: 3px solid $secondarycolor;
+  }
 }
 
 .nav-link {
