--- a/app/views/my_classroom/_vocabulary_table.html.erb
+++ b/app/views/my_classroom/_vocabulary_table.html.erb
@@ -1,9 +1,10 @@
-<table class="table table-striped">
+<table id="vocab-table" class="table table-striped">
   <thead>
     <tr>
       <th scope="col">Español 🇪🇸</th>
       <th scope="col">English 🇬🇧</th>
       <th scope="col">Notes</th>
+      <th scope="col"></th>
     </tr>
   </thead>
   <tbody>
@@ -12,6 +13,13 @@
         <td><%= word.spanish_def %></td>
         <td><%= word.english_def %></td>
         <td><%= word.extra_info %></td>
+        <td><%= link_to word_path(word),
+                                        method: :delete,
+                                        class: "del",
+                                        remote: true,
+                                        data: { confirm: "Are you sure?" } do %>
+                                          <i class="fa-solid fa-trash-can"></i>
+                                        <% end %></td>
       </tr>
       <% end %>
   </tbody>
