--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,6 +15,9 @@
           <li class="nav-item-link">
             <%= link_to "My Account", my_account_path(current_user), class: "nav-link nav-link-account" %>
           </li>
+          <li class="nav-item-link">
+            <%= link_to "My Classroom", my_classroom_path(current_user), class: "nav-link nav-link-classroom" %>
+          </li>
           <li class="nav-item dropdown">
             <% if current_user.photo.attached? %>
               <%= cl_image_tag current_user.photo.key, class: "avatar dropdown-toggle nav-avatar", crop: :fill, id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
