related content styling show pages

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -20,7 +20,7 @@
 .footer-content {
   width: 170px;
   a {
-    color: rgb(80,80,80);
+    color: rgb(130, 130, 130);
     text-decoration: none;
     transition: 0.3s;
   }
