--- a/app/assets/stylesheets/utilities/_custom_container.scss
+++ b/app/assets/stylesheets/utilities/_custom_container.scss
@@ -31,13 +31,9 @@
 .related-container {
   width: 100%;
   display: grid;
-  padding-top: 5px;
-  grid-column-gap: 32px;
-  grid-template-columns: 1fr;
-  row-gap: 48px;
-  margin: 16px 0px;
-  grid-auto-flow: column;
-  height: 290px;
+  grid-row-gap: 28px;
+  height: 582px;
   overflow-y: scroll;
   scrollbar-color: $secondarycolor;
+  justify-items: center;
 }
