--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -18,6 +18,9 @@
     <div class="sidebar">
       <%= render "shared/reviews", resource: @resource %>
       <%= render "shared/translator" %>
+      <div class="mt-5 pt-4 border-top">
+        <h5>You may also be interested in...</h5>
+      </div>
       <div class="related-container">
         <%= render @related_resources %>
       </div>
