added sidebar features

--- a/app/views/my_classroom/show.html.erb
+++ b/app/views/my_classroom/show.html.erb
@@ -1,6 +1,7 @@
 <div class="container-transp">
   <h1 class="mt-4">My Classroom</h1>
-  <p class="mb-4">Review your notes and study vocabulary</p>
+  <p class="my-5">Here, you can see your notes and ratings of resources. You can also add vocabulary to your list and review it. <br>
+  Learning a language takes regular practice, so don't forget to study vocabulary!</p>
 
   <div class="d-flex">
     <div class="w-25 my-account-nav-container">
