--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -17,6 +17,8 @@
     <div class="sidebar">
       <%= render "shared/reviews", resource: @resource %>
       <%= render "shared/translator" %>
+      <%= render "shared/new_word_form" %>
+      <h5 class="blue-text">More like this...</h5>
       <div class="related-container">
         <%= render @related_resources %>
       </div>
