--- a/app/views/shared/_new_word_form.html.erb
+++ b/app/views/shared/_new_word_form.html.erb
@@ -1,10 +1,12 @@
-<%= simple_form_for @word, url: words_path, remote: true do |f| %>
-  <div class="w-100 d-flex flex-column">
-    <%= f.input :spanish_def, required: false, label: "Español:" %>
-    <%= f.input :english_def, required: false, label: "English:" %>
-    <%= f.input  :extra_info, label: "Add a note?" %>
-    <%= button_tag :submit, class: "btn vocab-button align-self-end" do %>
-      <i class="fa-solid fa-plus"></i>
-    <% end %>
-  </div>
-<% end %>
+<div class="border-top pt-5 mb-5">
+  <h5 class="yellow-text">Add a word to your vocabulary list</h5>
+  <%= simple_form_for @word, url: words_path, remote: true do |f| %>
+    <div class="w-100 d-flex flex-column">
+      <%= f.input :spanish_def, required: false, label: "Español:" %>
+      <%= f.input :english_def, required: false, label: "English:" %>
+      <%= button_tag :submit, class: "btn vocab-button align-self-end" do %>
+        <i class="fa-solid fa-plus"></i>
+      <% end %>
+    </div>
+  <% end %>
+</div>
