--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -17,10 +17,9 @@
     <div class="sidebar">
       <%= render "shared/reviews", resource: @resource %>
       <%= render "shared/translator", word: @word %>
-      <div class="border-top pt-5">
-        <h5 class="add-word-header">Add a word to your vocabulary list</h5>
-        <%= render "shared/new_word_form" %>
-      </div>
+      <h5 class="add-word-header">Add a word to your vocabulary list</h5>
+      <%= render "shared/new_word_form" %>
+      <h5 class="blue-text">More like this...</h5>
       <div class="related-container">
         <%= render @related_resources %>
       </div>
