--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -20,7 +20,7 @@
       <div class="border-top pt-5">
         <h5 class="add-word-header">Add a word to your vocabulary list</h5>
         <%= render "shared/new_word_form" %>
-             
+      </div>
       <div class="mt-5 pt-4 border-top">
         <h5>You may also be interested in...</h5>
       </div>
@@ -28,6 +28,7 @@
         <%= render @related_resources %>
       </div>
     </div>
+
   </div>
 
 </div>
