--- a/app/views/my_account/show.html.erb
+++ b/app/views/my_account/show.html.erb
@@ -2,25 +2,23 @@
   <h1 class="mt-4">My Account</h1>
   <p class="mb-4">See all your bookmarked videos and viewing history here</p>
 
-  <div class="d-flex">
+   <div class="d-flex">
     <div class="w-25 my-account-nav-container">
 <%# <i class="fa-solid fa-caret-right"></i> %>
       <ul class="nav flex-column nav-pills" id="pills-tab" role="tablist">
+
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">My profile</button>
+        </li>
+
         <li class="nav-item d-flex" role="presentation">
-          <button class="nav-link active" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="true">My profile</button>
+          <button class="nav-link" id="pills-bookmarks-tab" data-bs-toggle="pill" data-bs-target="#pills-bookmarks" type="button" role="tab" aria-controls="pills-bookmarks" aria-selected="true">My bookmarks</button>
         </li>
-        <li class="nav-item" role="presentation">
-          <button class="nav-link" id="pills-messages-tab" data-bs-toggle="pill" data-bs-target="#pills-messages" type="button" role="tab" aria-controls="pills-messages" aria-selected="false">My messages</button>
+
+        <li class="nav-item d-flex" role="presentation">
+          <button class="nav-link" id="pills-history-tab" data-bs-toggle="pill" data-bs-target="#pills-history" type="button" role="tab" aria-controls="pills-history" aria-selected="true">History</button>
         </li>
-        <li class="nav-item" role="presentation">
-          <button class="nav-link" id="pills-notes-tab" data-bs-toggle="pill" data-bs-target="#pills-notes" type="button" role="tab" aria-controls="pills-notes" aria-selected="false">My notes</button>
-        </li>
-        <li class="nav-item" role="presentation">
-          <button class="nav-link" id="pills-bookmarks-tab" data-bs-toggle="pill" data-bs-target="#pills-bookmarks" type="button" role="tab" aria-controls="pills-bookmarks" aria-selected="false">My bookmarks</button>
-        </li>
-        <li class="nav-item" role="presentation">
-          <button class="nav-link" id="pills-history-tab" data-bs-toggle="pill" data-bs-target="#pills-history" type="button" role="tab" aria-controls="pills-history" aria-selected="false">My history</button>
-        </li>
+
       </ul>
     </div>
 
@@ -29,14 +27,6 @@
 
         <div class="tab-pane fade show active" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
           <%= render "my_profile" %>
-        </div>
-
-        <div class="tab-pane fade" id="pills-messages" role="tabpanel" aria-labelledby="pills-messages-tab">
-          <%= render "my_messages" %>
-        </div>
-
-        <div class="tab-pane fade" id="pills-notes" role="tabpanel" aria-labelledby="pills-notes-tab">
-          <%= render "my_notes" %>
         </div>
 
         <div class="tab-pane fade" id="pills-bookmarks" role="tabpanel" aria-labelledby="pills-bookmarks-tab">
