--- a/app/assets/stylesheets/components/_index_hero.scss
+++ b/app/assets/stylesheets/components/_index_hero.scss
@@ -72,3 +72,28 @@
   background-color: $secondarycolor;
   color: white;
 }
+
+.filter-tags-active {
+  position: absolute;
+  transform: scale(0);
+}
+
+.filter-tags-active + label {
+  cursor: pointer;
+  display: inline-block;
+  font-size: 0.7rem;
+  border-radius: 50rem;
+  padding: 0.1rem 0.5rem;
+  background-color: $secondarycolor;
+  color: white;
+  border: 1px solid $secondarycolor;
+  margin-right: 0.6rem;
+  margin-bottom: 0.4rem;
+}
+
+#preferences {
+  border-radius: 50rem;
+  padding: 0.1rem 0.5rem;
+  color: white;
+  font-size: 1rem;
+}
