--- a/app/assets/stylesheets/components/_tooltips.scss
+++ b/app/assets/stylesheets/components/_tooltips.scss
@@ -1,25 +1,44 @@
-.tooltip {
+/* Tooltip container */
+.my-tooltip {
   position: relative;
   display: inline-block;
-  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+  transition: 1s;
+  margin-left: 10px;
 }
 
 /* Tooltip text */
-.tooltip .tooltiptext {
+.my-tooltip .my-tooltiptext {
   visibility: hidden;
-  width: 120px;
-  background-color: black;
-  color: #fff;
+  width: 250px;
+  background-color: white;
+  color: $dark-grey;
   text-align: center;
-  padding: 5px 0;
+  padding: 8px 4px;
   border-radius: 6px;
+  box-shadow: 2px 2px 4px rgba(50, 50, 50, 0.2);
 
   /* Position the tooltip text - see examples below! */
   position: absolute;
   z-index: 1;
+  opacity: 0;
+  transition: opacity 1s;
+  bottom: 9px;
+  left: 21px;
+}
+
+.my-tooltip .my-tooltiptext::after {
+  content: " ";
+  position: absolute;
+  top: 50%;
+  right: 100%; /* To the left of the tooltip */
+  margin-top: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent white transparent transparent;
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
+.my-tooltip:hover .my-tooltiptext {
   visibility: visible;
+  opacity: 1;
 }
