--- a/app/assets/stylesheets/utilities/_show_pages_bkg_color.scss
+++ b/app/assets/stylesheets/utilities/_show_pages_bkg_color.scss
@@ -1,5 +1,5 @@
 .page-background {
   background-image: url("color-bg-extended.png");
   // background-repeat: no-repeat;
-  // background-size: cover;
+  background-size: 100vw auto;
 }
