--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -20,6 +20,20 @@
   border: 1px solid $primarycolor;
 }
 
+.avatar-xl-default {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  border: 1px solid $primarycolor;
+  background-color: $secondarycolor;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 56px;
+  color: $primarycolor;
+  font-weight: bold;
+}
+
 .avatar-small {
   object-fit: cover;
   width: 38px;
