--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -24,13 +24,13 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  border: 1px solid $primarycolor;
-  background-color: $secondarycolor;
+  // border: 1px solid $secondarycolor;
+  background-color: $turquoise;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 56px;
-  color: $primarycolor;
+  color: white;
   font-weight: bold;
 }
 
