--- a/app/views/my_account/show.html.erb
+++ b/app/views/my_account/show.html.erb
@@ -2,7 +2,7 @@
   <h1 class="mt-4">My Account</h1>
   <p class="mb-4">See all your bookmarked videos and viewing history here</p>
    <div class="d-flex">
-    <div class="w-25 my-account-nav-container">
+    <div id="my-account-nav" class="w-25 my-account-nav-container">
 <%# <i class="fa-solid fa-caret-right"></i> %>
       <ul class="nav flex-column nav-pills" id="pills-tab" role="tablist">
 
