--- a/app/views/my_classroom/_my_notes.html.erb
+++ b/app/views/my_classroom/_my_notes.html.erb
@@ -1,6 +1,6 @@
 <h2>My Notes</h2>
 <% @notes.each do |note| %>
-  <div class="d-flex">
+  <div class="d-flex my-5">
 
     <%= render note.resource %>
 
