--- a/app/views/my_classroom/show.html.erb
+++ b/app/views/my_classroom/show.html.erb
@@ -4,7 +4,7 @@
   Learning a language takes regular practice, so don't forget to study vocabulary!</p>
 
   <div class="d-flex">
-    <div class="w-25 my-account-nav-container">
+    <div id="classroom-nav" class="w-25 my-account-nav-container">
 <%# <i class="fa-solid fa-caret-right"></i> %>
       <ul class="nav flex-column nav-pills" id="pills-tab" role="tablist">
 
