--- a/app/assets/stylesheets/components/_wordbank.scss
+++ b/app/assets/stylesheets/components/_wordbank.scss
@@ -12,3 +12,15 @@
 #word_extra_info {
   resize: none;
 }
+
+#vocab-table {
+  width: 100%;
+}
+
+.add-word-form {
+  width: 45%;
+}
+
+.wordbank-translator {
+  width: 45%;
+}
