--- a/app/views/my_classroom/_vocabulary_table.html.erb
+++ b/app/views/my_classroom/_vocabulary_table.html.erb
@@ -1,9 +1,9 @@
-<table id="vocab-table" class="table table-striped">
+<table id="vocab-table" class="table">
   <thead>
     <tr>
-      <th scope="col">Español 🇪🇸</th>
-      <th scope="col">English 🇬🇧</th>
-      <th scope="col">Notes</th>
+      <th scope="col">🇪🇸  Español</th>
+      <th scope="col">🇬🇧  English</th>
+      <th scope="col">Example sentences</th>
       <th scope="col"></th>
     </tr>
   </thead>
