--- a/app/views/my_classroom/_my_notes.html.erb
+++ b/app/views/my_classroom/_my_notes.html.erb
@@ -1,6 +1,6 @@
-<h2>My Notes</h2>
+<h2 style="margin-bottom: 42px;">My Notes</h2>
 <% @notes.each do |note| %>
-  <div class="d-flex">
+  <div class="d-flex" style="margin-bottom: 42px;">
 
     <%= render note.resource %>
 
