--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar sticky-top navbar-expand-sm navbar-lenguaviva" id="navBar">
-  <div class="container-fluid">
+  <div class="container-fluid" style="padding-right:60px; padding-left:60px;">
     <%= link_to image_tag("lengua_viva_logo_transparent.png", class: "navbar-logo"), root_path, alt: "Lengua Viva logo" %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
