--- a/app/assets/stylesheets/components/_my_account_container.scss
+++ b/app/assets/stylesheets/components/_my_account_container.scss
@@ -8,7 +8,7 @@
 .my-account-nav-container {
   margin-right: 24px;
   background: rgba(255,255,255, 0.8);
-  padding-left: 32px;
+  padding: 16px 0 16px 32px;
 }
 
 .my-account-main-container {
