--- a/app/assets/stylesheets/components/_tooltips.scss
+++ b/app/assets/stylesheets/components/_tooltips.scss
@@ -47,3 +47,13 @@
   visibility: visible;
   opacity: 1;
 }
+
+#feed-tool-tip {
+  padding-top: 16px !important;
+  p {
+    font-size: 16px !important;
+  }
+  #feed-tooltip-icon {
+    color: $turquoise;
+  }
+}
