--- a/app/assets/stylesheets/components/_index_hero.scss
+++ b/app/assets/stylesheets/components/_index_hero.scss
@@ -2,6 +2,7 @@
   background-color: rgba(255,255,255, 0.5);
   height: 400px;
   padding: 100px 0 0 250px;
+
 }
 
 .banner h1 {
@@ -33,8 +34,9 @@
 #home-search {
   width: 54px;
   height: 54px;
-  border-radius: 50%;
+  border-radius: 0 12px 12px 0;
   margin-left: auto;
+  background-color: $primarycolor;
 }
 
 .resource-search {
@@ -42,12 +44,15 @@
 }
 
 .filters {
-  margin: 18px 18px 18px 0px;
+  margin: 0 18px 18px 0px;
   display: flex;
   align-items: center;
-  width: 55vw;
+  width: 65vw;
   gap: 12px;
-  flex-wrap: wrap;
+}
+
+#filter-text {
+  font-size: 14px;
 }
 
 .filter-tags {
