--- a/app/assets/stylesheets/components/_tooltips.scss
+++ b/app/assets/stylesheets/components/_tooltips.scss
@@ -52,8 +52,10 @@
   padding-top: 18px !important;
   p {
     font-size: 16px !important;
+    text-align: left;
+    padding: 8px;
   }
   #feed-tooltip-icon {
-    color: $turquoise;
+    color: $yellow;
   }
 }
