--- a/app/views/my_classroom/_my_vocabulary.html.erb
+++ b/app/views/my_classroom/_my_vocabulary.html.erb
@@ -1,4 +1,4 @@
-<h2 class="mb-5">My Vocabulary</h2>
+<h2 id="my-vocabulary-header" class="mb-5">My Vocabulary</h2>
 
 <%= render "vocabulary_table" %>
 
