--- a/app/views/shared/_bookmark_button.html.erb
+++ b/app/views/shared/_bookmark_button.html.erb
@@ -1,13 +1,13 @@
 <% if @resource.bookmarked?(current_user) %>
 
   <%= link_to bookmark_path(@bookmark), method: :delete, class: "bookmark-btn", remote: true do %>
-    <i class="fas fa-bookmark bookmark-icon"></i>
+    <i id="bookmark-button" class="fas fa-bookmark bookmark-icon"></i>
   <% end %>
 
 <% else %>
 
   <%= link_to resource_bookmarks_path(@resource), method: :post, class: "bookmark-btn", remote: true do %>
-    <i class="fa-regular fa-bookmark bookmark-icon"></i>
+    <i id="bookmark-button" class="fa-regular fa-bookmark bookmark-icon"></i>
   <% end %>
 
 <% end %>
