--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -8,7 +8,7 @@
       <iframe width="100%" height="480" src="https://www.youtube.com/embed/<%= @resource.url_id %>"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <%= render "shared/interactions" %>
       <div class="comments-container">
-        <h2 class="pb-2">Comments</h2>
+        <h2 id="comment-header" class="pb-2">Comments</h2>
         <%= render "shared/comments", resource: @resource %>
         <%= render "shared/new_comment_form", resource: @resource %>
       </div>
