--- a/app/assets/stylesheets/components/_index_hero.scss
+++ b/app/assets/stylesheets/components/_index_hero.scss
@@ -93,7 +93,14 @@
 
 #preferences {
   border-radius: 50rem;
-  padding: 0.1rem 0.5rem;
-  color: white;
-  font-size: 1rem;
+  padding: 6px 12px;
+  color: $turquoise;
+  font-size: 14px;
+  border: 1px solid $turquoise;
+  background-color: white;
+  transition: 0.2s;
+    &:hover {
+      color: white;
+      background-color: $turquoise;
+    }
 }
