--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -34,6 +34,19 @@
   font-weight: bold;
 }
 
+// .avatar-xs-default {
+//   width: 46px;
+//   height: 46px;
+//   border-radius: 50%;
+//   background-color: $turquoise;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   font-size: 24px;
+//   color: white;
+//   font-weight: bold;
+// }
+
 .avatar-small {
   object-fit: cover;
   width: 38px;
