--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -12,7 +12,7 @@
     </div>
   </div>
   <div class="card-image">
-    <%= image_tag(article.thumbnail_url) %>
+    <%= image_tag("articles.png") %>
     <div class="card-tags">
       <% article.tag_list.each do |tag| %>
       <p>
