my profile style

--- a/app/views/my_account/_my_profile.html.erb
+++ b/app/views/my_account/_my_profile.html.erb
@@ -14,27 +14,27 @@
     <div class="profile-personal-details">
       <table>
         <tr>
-          <td style="width:200px; height:38px;">First name</td>
+          <td style="width:200px; height:38px;"><strong>First name</strong></td>
           <td style="width:600px;"><%= current_user.first_name %></td>
         </tr>
         <tr>
-          <td style="width:200px; height:38px;">Last name</td>
+          <td style="width:200px; height:38px;"><strong>Last name</strong></td>
           <td><%= current_user.last_name %></td>
         </tr>
         <tr>
-          <td style="width:200px; height:38px;">Age</td>
+          <td style="width:200px; height:38px;"><strong>Age</strong></td>
           <td><%= current_user.age%></td>
         </tr>
         <tr>
-          <td style="width:200px; height:38px;">Native language</td>
+          <td style="width:200px; height:38px;"><strong>Native language</strong></td>
           <td><%= current_user.native_language%></td>
         </tr>
         <tr>
-          <td style="width:200px; height:38px;">Target language</td>
+          <td style="width:200px; height:38px;"><strong>Target language</strong></td>
           <td><%= current_user.target_language%></td>
         </tr>
         <tr>
-          <td style="width:200px; height:38px;">Bio</td>
+          <td style="width:200px; height:38px;"><strong>Bio</strong></td>
           <td><%= current_user.bio%></td>
         </tr>
       </table>
