--- a/app/views/my_account/_my_profile.html.erb
+++ b/app/views/my_account/_my_profile.html.erb
@@ -34,7 +34,7 @@
           <td><%= current_user.target_language%></td>
         </tr>
         <tr>
-          <td style="width:200px; height:38px;"><strong>Bio</strong></td>
+          <td style="vertical-align: top; width:200px; height:38px;"><strong>Bio</strong></td>
           <td><%= current_user.bio%></td>
         </tr>
       </table>
