--- a/app/views/resources/_spotlight.html.erb
+++ b/app/views/resources/_spotlight.html.erb
@@ -4,16 +4,16 @@
     <div class= "flip-container">
       <div class="featured-content">
         <div class= "featured-content-front">
-          <img src= "<%= @random_resource.thumbnail_url %>">
+          <img src= "<%= @spotlight_resource.thumbnail_url %>">
         </div>
 
         <div class="featured-content-back">
-          <%= link_to @random_resource do %>
-          <h3><strong><%= @random_resource.title %></strong></h3>
+          <%= link_to @spotlight_resource do %>
+          <h3><strong><%= @spotlight_resource.title %></strong></h3>
 
 
-          <h4>by <%= @random_resource.author %></h4>
-            <% case @random_resource.type %>
+          <h4>by <%= @spotlight_resource.author %></h4>
+            <% case @spotlight_resource.type %>
               <% when "Video" %>
                 <i id="spotlight-icon" class="fa-solid fa-video"></i>
               <% when "Podcast" %>
@@ -24,13 +24,12 @@
                 <i id="spotlight-icon" class="fa-brands fa-readme"></i>
             <% end %>
           <% end %>
-          <%# <p>National Geographic en conjunto con Paulina Erandi Ramírez Ochoa, investigadora y curadora del Estudio Museo Casa Diego Rivera y Frida Kahlo, hacen un recorrido dentro del Estudio Museo Casa de Diego Rivera y Frida Kahlo, un espacio de intimidad y trabajo creado por el artista Juan O’Gorman especialmente para Diego y Frida.</p> %>
         </div>
       </div>
     </div>
 
     <div class= "spotlight-comments">
       <h4>See what the community is saying</h4>
-      <%= render "shared/comments", resource: Resource.last %>
+      <%= render "shared/comments", resource: @spotlight_resource %>
     </div>
   </div>
