--- a/app/views/shared/_reviews.html.erb
+++ b/app/views/shared/_reviews.html.erb
@@ -1,31 +1,27 @@
 <div class="main-reviews-container">
-  <% if @resource.reviews.count > 0 %>
-    <% @resource.reviews.each do |review| %>
-      <div class="posted-review-container">
-        <div class="review-heading mb-3 d-flex">
-          <div class="d-flex">
-            <h5 class="pink-text my-note">My note</h5>
-            <% if review.user == current_user %>
-              <%= link_to review_path(review),
-                                              method: :delete,
-                                              class: "del",
-                                              remote: true,
-                                              data: { confirm: "Are you sure?" } do %>
-                                                <i class="fa-solid fa-trash-can", style="margin-left: 26px;"></i>
-                                              <% end %>
-            <% end %>
-          </div>
+  <% if @resource.get_user_review(current_user) %>
+    <div class="posted-review-container">
+      <div class="review-heading mb-3 d-flex">
+        <div class="d-flex">
+          <h5 class="pink-text my-note">My note</h5>
+            <%= link_to review_path(@resource.get_user_review(current_user)),
+                                            method: :delete,
+                                            class: "del",
+                                            remote: true,
+                                            data: { confirm: "Are you sure?" } do %>
+                                              <i class="fa-solid fa-trash-can", style="margin-left: 26px;"></i>
+                                            <% end %>
         </div>
       </div>
+    </div>
 
-      <div class="review-content">
-          <% review.rating.times do  %>
-            <i class="fas fa-star"></i>
-          <% end %>
+    <div class="review-content">
+        <% @resource.get_user_review(current_user).rating.times do  %>
+          <i class="fas fa-star"></i>
+        <% end %>
 
-          <p class="mt-2"><%= review.content %></p>
-      </div>
-    <% end %>
+        <p class="mt-2"><%= @resource.get_user_review(current_user).content %></p>
+    </div>
   <% else %>
     <div class="new-review-container">
       <div class="d-flex mb-3">
