--- a/app/views/resources/_spotlight.html.erb
+++ b/app/views/resources/_spotlight.html.erb
@@ -28,7 +28,7 @@
       </div>
     </div>
 
-    <div class= "spotlight-comments">
+    <div class= "spotlight-comments w-50">
       <h4>See what the community is saying</h4>
       <%= render "shared/comments", resource: @spotlight_resource %>
     </div>
