--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -10,6 +10,6 @@
 
 .search-button {
   color: white;
-  background-color: $secondarycolor;
+  background-color: $turquoise;
   border-radius: 0 12px 12px 0;
 }
