--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -84,6 +84,10 @@
   bottom: 16px;
   font-weight: bold;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  background-color: rgba(100, 100, 100, 0.1);
+  border-radius: 6px;
+  padding-left: 6px;
+  padding-right: 6px;
 }
 
 .resource-likes p {
