--- a/app/assets/stylesheets/utilities/_custom_container.scss
+++ b/app/assets/stylesheets/utilities/_custom_container.scss
@@ -23,7 +23,7 @@
 }
 
 .sidebar {
-  width: 30%;
+  width: 36%;
   display: flex;
   flex-direction: column;
 }
@@ -36,6 +36,7 @@
   overflow-y: scroll;
   scrollbar-color: $secondarycolor;
   justify-items: center;
+  margin-top: 22px;
 }
 
 #index-container-transp {
