landing page stronger sub

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
         <h1>Level Up Your Language</h1>
       </div>
         <h3>Practise foreign languages with authentic materials.</h2>
-        <p class="my-4">Lengua Viva gives you personalised recommendations for songs, podcasts, articles and videos in your language of choice</p>
+        <p class="my-2"><strong>Lengua Viva gives you personalised recommendations for songs, podcasts, articles and videos in your language of choice</strong></p>
         <%= link_to "Get Started", resources_path, class: "btn my-4 btn-success sign-up-btn" %>
 
     </div>
