--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -4,6 +4,7 @@
   object-fit: cover;
   // border: 1px solid $blue-grey;
   border-radius: 50%;
+  box-shadow: 2px 2px 3px rgba(20,20,20, 0.2)
 }
 
 .avatar-large {
